F08: Journal med wait og notifyAll